# ormer

./: Cargo.toml  README.md  example-schema.yml
src/: filters.rs  helper_functions.rs  lib.rs  query_options.rs
src/compose/: conditions.rs  mod.rs  operators.rs  update.rs
src/schema_builder/: config.rs  directives.rs  error.rs  example-schema.json  example.schema.yml  mod.rs  schema.prisma  validate.rs
src/sql_types/: string.rs
src/sql_types/number/: mod.rs
