[package]
name = "ormer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.3"
regex = "1.5.6"
serde_json = "1.0"
serde = { version = "1.0.138", features = [ "derive" ] }
uuid = { version = "1.1.2", features = [ "serde" ] }

[dev-dependencies]
serde_json = "1.0"
